# rusty-ising-metropolis

./: Cargo.toml  README.md  Untitled.ipynb  parameters.txt  plot.py
data/: energies.txt
data_tmp/: energies.txt
src/: lattices.rs  main.rs  metropolis.rs
